modified:   job/docker-pipe-line/Jenkinsfile

--- a/job/docker-pipe-line/Jenkinsfile
+++ b/job/docker-pipe-line/Jenkinsfile
@@ -14,8 +14,8 @@ pipeline {
                 // Construir la imagen Docker usando Dockerfile en el directorio de la aplicación
                 script {
                     echo "Valor de la variable env.BUILD_ID: ${env.BUILD_ID}"
-                    // dockerImage = docker.build("mi_app:${env.BUILD_ID}", "-f job/docker-pipe-line/Dockerfile")
-                    sh sh "docker build -t job/docker-pipe-line ."
+                    dockerImage = docker.build("mi_app:${env.BUILD_ID}", "-f job/docker-pipe-line/Dockerfile .")
+                   
                 }
             }
         }
